# data

blueprints/: data_onboardings.json
installer/: upload_blueprints.py
package/: README.md  pyproject.toml  requirements.txt  setup.py
package/data/: __init__.py
package/data/handlers/: __init__.py  data_onboardings.py
ui/: data.tsx  package.json
ui/components/: radial-graph-models.ts  radial-graph.tsx
ui/navigation/: data_sheetnav.tsx  data_sidenav.tsx
ui/onboarding/: data_onboarding.tsx
ui/pages/: chat_inspect.tsx  data_explorer.tsx  graph_explorer.tsx  search_explorer.tsx  tool_data_crud.tsx  tool_data_dashboard.tsx  tool_data_tmp_artifact.tsx
