[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data"
version = "1.0.0"
description = "Data extension custom handlers and utilities"
authors = [
    {name = "Renglo Team"}
]
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["data", "data.handlers"]
